out/0197375b-2824-732f-9e21-9141b18c7089/log_plot.txt
Traceback (most recent call last):
  File "<string>", line 1, in <module>
    import dora; dora.start_runtime() # plot
                 ~~~~~~~~~~~~~~~~~~^^
RuntimeError: Dora Runtime raised an error.

Caused by:
   0: main task failed
   1: failed to init an operator
   2: failed to init python operator
   3: SyntaxError: invalid syntax (plot.py, line 55)

Location:
    binaries/runtime/src/operator/python.rs:31:9
